@@ -161,6 +161,7 @@ export(constant)
 export(contr.nhelmert)
 export(cvar)
 export(cvars)
+export(debugged)
 export(dell)
 export(dellplus)
 export(disp)
