@@ -1,3 +1,5 @@
+2023-03-23
+* debugged() lists debugged functions
 2022_08_15
 * Handle Ls with NAs in waldx (and waldf)
 2022_07_25
